(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
 (name pp)
 (modules pp)
 (libraries mppx ppxlib))

; (rule
 ; (targets check.ml)
 ; (deps (:pp pp.exe) (:input /home/slamko/proj/ocaml/mppx/test/test.ml))
 ; (action (run ./%{pp} --impl %{input} -o %{targets})))

(test
  (modules mppx)
 (preprocess (pps mppx))
 (name mppx))
