(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
 (name pp)
 (modules pp)
 (libraries ppx_catch ppxlib))

; (rule
 ; (targets check.ml)
 ; (deps (:pp pp.exe) (:input /home/slamko/proj/ocaml/mppx/test/test.ml))
 ; (action (run ./%{pp} --impl %{input} -o %{targets})))

(test
 (modules mppx)
 (preprocess (pps ppx_catch))
 (name mppx))
